# gkd_vision_26

./: .gitignore  CMakeLists.txt
calibration/: calibrate_handeye.cpp  capture.cpp
configs/: gkdhero.yaml  gkdinfantry.yaml
io/: CMakeLists.txt  gkdcontrol.cpp
io/gkdcontrol/: socket_interface.hpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp
tasks/auto_aim/planner/tinympc/: CMakeLists.txt
tasks/omniperception/: decider.cpp
tests/: handeye_test.cpp
tools/: CMakeLists.txt
